--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="wiki-header">
     <div class="container header-content">
-        <div class="logo"><a href="https://ibb.co/zTtLW8tV"><img src="https://i.ibb.co/nNKVq3KM/minecraft-title-4.png" alt="Lunisolar" border="0" class="flyer-logo-img"></a></div>
+        <div class="logo"><a href="https://ibb.co/zTtLW8tV"><img src="https://i.ibb.co/nNKVq3KM/minecraft-title-4.png" alt="Lunisolar" border="0" class="flyer-logo-img" style="max-height: 60px;"></a></div>
         
         <div class="search-wrapper">
             <div class="search-bar">
@@ -144,3 +144,5 @@
 
 </body>
 </html>
+
+
