--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <header class="wiki-header">
     <div class="container header-content" style="padding-top: 10px;">
-        <div class="logo"><img src="https://i.ibb.co/nNKVq3KM/minecraft-title-4.png" alt="Lunisolar" border="0" class="flyer-logo-img" style="max-height: 60px;"></div>
+        <div class="logo">
+            <img src="https://i.ibb.co/nNKVq3KM/minecraft-title-4.png" alt="Lunisolar" border="0" class="flyer-logo-img" style="max-height: 60px;">
+            <img src="https://i.ibb.co/r2VYJG4T/minecraft-title-5.png" alt="Wiki" border="0" style="max-height: 60px; margin-left: 10px;">
+        </div>
         
         <div class="search-wrapper">
             <div class="search-bar">
@@ -100,7 +103,8 @@
 
                 <section id="chest-shops">
                     <h2>🏪 ChestShops / PlayerShops</h2>
-                    <p>ChestShops allow you to sell items while offline and have a shop. To make one, you need to <strong>left-click a chest</strong> with the item you want to sell and type in chat the amount for it to go for. Then, put the item of choice in the chest.</p>
+                    <p>ChestShops allow you to sell items while offline and have a shop. To make one, you need to Read less
+strong>left-click a chest</strong> with the item you want to sell and type in chat the amount for it to go for. Then, put the item of choice in the chest.</p>
                     <p>If you need to edit the shop later on, you need to <strong>right-click it</strong>.</p>
                 </section>
 
@@ -131,7 +135,7 @@
                 
                 <section id="duels">
                     <h2>⚔️ Duels</h2>
-                    <p>To duel someone, you can duel with your armor or a selected kit. Do <code>/duel {player}</code> to duel someone.</p>
+                    <p>To duel someone, you can duel with your armor or a selected kit. Do <codeC>/duel {player}</code> to duel someone.</p>
                 </section>
 
             </article>
