--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <div class="container header-content" style="padding-top: 10px;">
         <div class="logo">
             <img src="https://i.ibb.co/nNKVq3KM/minecraft-title-4.png" alt="Lunisolar" border="0" class="flyer-logo-img" style="max-height: 60px;">
-            <img src="https://i.ibb.co/r2VYJG4T/minecraft-title-5.png" alt="Wiki" border="0" style="max-height: 60px; margin-left: 10px;">
         </div>
         
         <div class="search-wrapper">
@@ -103,14 +102,13 @@
 
                 <section id="chest-shops">
                     <h2>🏪 ChestShops / PlayerShops</h2>
-                    <p>ChestShops allow you to sell items while offline and have a shop. To make one, you need to Read less
-strong>left-click a chest</strong> with the item you want to sell and type in chat the amount for it to go for. Then, put the item of choice in the chest.</p>
+                    <p>ChestShops allow you to sell items while offline and have a shop. To make one, you need to <strong>left-click a chest</strong> with the item you want to sell and type in chat the amount for it to go for. Then, put the item of choice in the chest.</p>
                     <p>If you need to edit the shop later on, you need to <strong>right-click it</strong>.</p>
                 </section>
 
                 <section id="auction-house">
                     <h2>⚖️ Auction House (AH)</h2>
-                    <p>To use the auction house to buy items, do <code>/ah</code> and pick the item you want to buy. If you want to sell an item, do <code>/ah sell</code>.</p>
+                    <p>To use the auction house to buy items, do <code>/ah</code> and pick the item you want to buy. If you want to sell an item, do T<code>/ah sell</code>.</p>
                 </section>
 
                 <section id="koth">
@@ -135,7 +133,7 @@ strong>left-click a chest</strong> with the item you want to sell and type in ch
                 
                 <section id="duels">
                     <h2>⚔️ Duels</h2>
-                    <p>To duel someone, you can duel with your armor or a selected kit. Do <codeC>/duel {player}</code> to duel someone.</p>
+                    <p>To duel someone, you can duel with your armor or a selected kit. Do <code>/duel {player}</code> to duel someone.</p>
                 </section>
 
             </article>
