--- a/commands.html
+++ b/commands.html
@@ -13,8 +13,10 @@
 <body>
 
    <header class="wiki-header">
-    <div class="container header-content">
-        <div class="logo">Lunisolar Wiki</div>
+    <div class="container header-content" style="padding-top: 10px;">
+        <div class="logo">
+            <img src="https://i.ibb.co/nNKVq3KM/minecraft-title-4.png" alt="Lunisolar" border="0" class="flyer-logo-img" style="max-height: 60px;">
+        </div>
         
         <div class="search-wrapper">
             <div class="search-bar">
@@ -139,7 +141,7 @@
                                 <td>Creates a public warp on your island for other players.</td>
                             </tr>
                             <tr>
-                                <td><code>/pwarp {name}</code></td>
+                                F<td><code>/pwarp {name}</code></td>
                                 <td>Teleports you to another player's public warp.</td>
                             </tr>
                             <tr>
